# FastAPI_learn

./: .env  .env.example  .gitignore  .mcp.json  CLAUDE.md  DOCKER_IMPROVEMENTS.md  Dockerfile  README.md  SUPABASE_INTEGRATION.md  docker-compose.improved.yml  docker-compose.yml  pyproject.toml  setup_dev_layout.sh
backend/fastapi/: .env.example  Dockerfile  Dockerfile.optimized  README_CAT_API.md  README_DOCKER_OPTIMIZATION.md  README_SEARCH_API.md  REFACTORING_SUMMARY.md  comprehensive_import_test.py  direct_test.py  docker-compose.yml  exec_test.py  final_test.py  import_test_report.py  manual_import_test.py  pyproject.toml  run_pytest_tests.py  run_tests.py  simple_test.py  simple_validation.py  test.db  test_imports.py  test_imports_manual.py  validate_imports.py  validation_report.py
backend/fastapi/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/fastapi/app/: main.py  pyproject.toml  settings.py
backend/fastapi/app/api/: __init__.py  deps.py
backend/fastapi/app/cruds/: __init__.py  chat_bot.py  crud_adv_character.py  crud_adv_dialogue.py  crud_adv_scenario.py  crud_adv_session.py  crud_user.py  user.py
backend/fastapi/app/db/: database.py  supabase_client.py
backend/fastapi/app/models/: __init__.py  adv_character.py  adv_dialogue.py  adv_scenario.py  adv_session.py  cat.py  chat_bot.py  user.py
backend/fastapi/app/routers/: bot_create.py
backend/fastapi/app/schemas/: __init__.py  adv_chat.py  bot.py  cat.py  cat_image.py  dog.py  search.py  user.py
backend/fastapi/static/: README.md  index.html  script.js  style.css
(+115 files in other folders)
