[tool.poetry]
name = "fastapi-lambda-demo"
version = "0.1.0"
description = "FastAPI Lambda Demo Application"
authors = ["gadname <gakugaku1114@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
mangum = "^0.19.0"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
uvicorn = "^0.27.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
ulid-py = "^1.1.0"
supabase = "^2.3.4"
postgrest = "^0.14.0"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 